[FIX] uneven heights of navbar elements

--- a/app/assets/styles/navbar.scss
+++ b/app/assets/styles/navbar.scss
@@ -336,6 +336,7 @@ i {
   color: grey;
   border-right: 0px solid lightgray;
   border-radius: 5px;
+  line-height: 1;
 }
 
 #toolsec li:hover {
